small syntax improvements, fixed exposed SendGrid key

--- a/lib/project/auth-project-files/config/dev.env
+++ b/lib/project/auth-project-files/config/dev.env
@@ -8,5 +8,5 @@ DB_PASSWORD=
 DB_NAME=app
 JWT_SECRET=secret
 
-SENDGRID_API_KEY=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
+SENDGRID_API_KEY=
 EMAIL=app@mail.com
