--- a/lib/project/project-files/config/test.env
+++ b/lib/project/project-files/config/test.env
@@ -5,8 +5,10 @@ DB_CLIENT=mysql
 DB_HOST=127.0.0.1
 DB_USER=root
 DB_PASSWORD=
-DB_NAME=apptest
+DB_NAME=app_test
+
 JWT_SECRET=secret
+TOKEN_EXP_TIME=3600
 
 SENDGRID_API_KEY=
 EMAIL=app@mail.com
